# ueb_bmi

./: .gitignore  CMakeLists.txt  build.bash  version.txt
examples/TWDEF/: LAI.nc  LAI2.nc  aspect.nc  example_bmi_multi_realization_config_w_ueb.json  hcan.nc  prcp.nc  prcp1.nc  runTWDEF.sh  runUEB.sh  slope.nc  uebvariables.xlsx  watershed.nc  watershed1.nc  watershed2.nc
examples/TWDEF_onecell/: SWE.nc  SWISM.nc  SWIT.nc
examples/bmi_test/: example_bmi_multi_realization_config_w_ueb.json  run_test.bash
src/: CMakeLists.txt
src/bmi/: ControlFile.cxx  ControlFile.hxx  ForcingVariables.cxx  ForcingVariables.hxx  OutControl.cxx  OutControl.hxx  Parameters.cxx  Parameters.hxx  SiteVariables.cxx  SiteVariables.hxx  Watershed.cxx  Watershed.hxx  bmi_main.cxx  bmi_ueb.cxx  bmi_ueb.hxx
src/ueb/: canopy.cpp  matrixnvector.cpp  ncfunctions.cpp  snowdgtv.cpp  snowxv.cpp  uebdecls.cpp  uebinputs.cpp  uebpgdecls.h
src/utilities/: Logger.cpp  Logger.hpp
